[FIX] Margin between images on mobile

--- a/pages/projekty/slug.module.scss
+++ b/pages/projekty/slug.module.scss
@@ -141,11 +141,16 @@
   // max-width: 100%;
   width: 100%;
   height: 100%;
+  margin-bottom: 1rem;
 
   img {
     width: 100%;
     max-height: 700px;
     height: 100%;
     object-fit: cover;
+  }
+
+  @media (min-width: 56.25em) {
+    margin-bottom: 0;
   }
 }
